<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Name -->
    <string name="app_name">Flag</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>

    <!-- Activity Title -->
    <string name="title_activity_loading">Loading</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_join">Join</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_flag_list">Flag List</string>
    <string name="title_activity_shop"></string>
    <string name="title_activity_items"></string>
    <string name="title_activity_reward">Reward</string>

    <!-- Common String -->
    <string name="empty"></string>
    <string name="ok">Sure why not</string>
    <string name="no">No thanks</string>
    <string name="please_wait">please wait</string>
    <string name="rewards">rewards</string>
    <string name="list">list</string>
    <string name="reward_info_check_in">Check-In Reward</string>
    <string name="check_in">Check-In</string>
    <string name="checked_in">Checked-In</string>
    <string name="go_to_items">Go to Items</string>
    <string name="like_it">Like it</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="sample_email">flag@tankers.com</string>
    <string name="label_email">email</string>
    <string name="sample_pw">password</string>
    <string name="label_pw">password</string>
    <string name="label_pwcheck">check password</string>
    <string name="btnjoin">JOIN</string>
    <string name="btnlogin">LOGIN</string>
    <string name="btnNewAccount">Create new account</string>

</resources>